# quant-hash

./: .gitignore  requirements.txt
cpp/: CMakeLists.txt  Makefile
cpp/analysis/: brute_force.cpp  brute_force_16.txt  brute_force_8.txt
cpp/include/: brute_force.hpp  constants.hpp  hash.hpp  permutation.hpp
cpp/src/: hash.cpp  main.cpp  permutation.cpp
